# TravellerProject

./: .gitignore
.github/workflows/: build.yml
Admin website/: Admin website.sln
Admin website/Admin website/: Admin website.csproj
Admin website/Admin website/Model/: DataAccess.cs
Admin website/Admin website/Pages/: Index.cshtml  Index.cshtml.cs  MyCustomComponent.razor  Privacy.cshtml.cs  WorkerPage.cshtml  WorkerPage.cshtml.cs  index.cshtml.cs
Certificates/Client/: localhost+3-client-key.pem  localhost+3-client.p12
Certificates/Server/: localhost+3-key.pem  localhost+3.pem
Database/SQL/: TravellerFullCreationSQL.sql  TravellerFunctions.sql  TravellerGenerateData.sql  TravellerOpsTables.sql  TravellerStoreProcedure.sql
Database/StoredProcedures/: CoolMathGames.sql  FullSql.sql  LeftSideDatabase.sql  ListViewRouteFunction.sql  PopulateTables.sql  TableCreations.sql  Traveller StoreProcedure.sql  list route destinations stored procedure.sql
Database/nix_db/: .gitignore  shell.nix
Documentation/: App-Web_Wireframe.xd
RestAPI/: .env  Cargo.toml  README.md  test.txt
RestAPI/entity_handler/: Cargo.toml
RestAPI/entity_handler/src/: lib.rs
RestAPI/rest_api/: .env  Cargo.toml
RestAPI/rest_api/keys/: cert.pem  key.pem
RestAPI/rest_api/src/: authorizer.rs  main.rs  message_handler.rs  scope.rs
RestAPI/rest_api/src/endpoint/: login.rs  mod.rs  register.rs  routes.rs  ticket.rs  train_route.rs
RestAPI/rest_api/src/entity/: destinations.rs  mod.rs  person.rs  prelude.rs  roadmaps.rs  route_destinations.rs  routes.rs  stations.rs  ticket.rs  trains.rs
RestAPI/user_handler/: Cargo.toml
RestAPI/user_handler/src/: hashing.rs  lib.rs  user_handler.rs
Traveller/AdminSite/: .gitignore
Traveller/HybridApp/: .gitignore  README.md  pubspec.yaml
Traveller/HybridApp/lib/: main.dart
(+157 files in other folders)
