[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity_handler = { path = "../entity_handler" }

aliri = "0.6.2"
aliri_axum = "0.3.0"
aliri_clock = "0.1.4"
aliri_oauth2 = "0.10.0"
aliri_tower = "0.5.0"
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-postgres = "0.11.0"
dotenv = "0.15.0"
firebae-cm = { version = "0.4.2", features = ["oauth"] }
gcp_auth = "0.9.0"
rand = "0.8.5"
rayon = "1.8.0"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio", "sqlx"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
uuid = "1.4.1"
itertools = "0.11.0"
hyper = "0.14.27"
hyper-tls = "0.5.0"
reqwest = "0.11.22"
