[package]
name = "user_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity_

anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-postgres = "0.11.0"
fcm = "0.9.2"
rand = "0.8.5"
ring = "0.17.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlx-sqlite", "runtime-tokio"] }
tokio-postgres = "0.7.10"
uuid = "1.4.1"
